# divana

./: .gitignore  Cargo.toml  README.md  build.rs  divana.sln  divana.sln.DotSettings  go.mod  go.sum  libogg.lib  portaudio.lib
divana/: main.go
divana.client/: Program.cs  divana.client.csproj
divana.client/ui/: UiAction.cs  UiActionResult.cs  UiCommunicator.cs  UiLayout.cs  UiLayouts.cs
divana.core/: Class1.cs
divana/config/: config.go
divana/sound/: context.go  device-info.go  device.go
divana/ui/: configuration.go  recover.go  ui.go  window.go
old/: Cargo.toml  README.md
old/src/device/: info.rs  input.rs  mod.rs
src/: device_info.rs  main.rs  ui.rs  vorbis.rs
src/device/: common.rs  info.rs  input.rs  mod.rs  output.rs
src/vorbis/: mod.rs
wtf/: Cargo.toml  rustfmt.toml
wtf/src/: device_info.rs  main.rs
wtf/src/device_info/: format.rs  mod.rs
