[package]
name = "wtf"
version = "0.1.0"
authors = ["vadik <mnz-rrh@ya.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subprocess = { git = "https://github.com/hniksic/rust-subprocess" }
winapi = { version = "0.3.8", features = ["mmeapi"] }
